# PERIDOT

./: .gitignore
Snakemake/: Snakefile_dev
search_primer/: .gitignore  Cargo.toml  README.md  config.toml
search_primer/src/: cbf_storage.rs  config.rs  counting_bloomfilter_util.rs  lib.rs  main.rs  sequence_encoder_util.rs
