[package]
name = "search_primer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core functionality
bio = "2.0.3"
sha2 = "0.10.2"

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Command line interface
getopts = "0.2.21"

# Error handling
anyhow = "*"

# Logging and time
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.5"

# Testing and debugging
tempfile = "3"
function_name = "0.3.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
